--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p>MSCA: FLORIDA</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<p>Fiber laser. </p>
+<p>Nice to meet you!</p>
 
 <ul>
   <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
